feat: add firestoreDbRoute
