# server/src/openapi.json
@@ -134,6 +134,78 @@
           }
         }
       }
+    },
+    "/api/firestore/{collectionName}": {
+      "get": {
+        "tags": ["Firestore"],
+        "summary": "Get all user documents from collection",
+        "parameters": [
+          {
+            "name": "collectionName",
+            "in": "path",
+            "required": true,
+            "schema": { "type": "string" }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "User filtered documents",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "type": "object",
+                    "additionalProperties": true
+                  }
+                }
+              }
+            }
+          }
+        }
+      },
+
+      "post": {
+        "tags": ["Firestore"],
+        "summary": "Bulk insert documents",
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "array",
+                "items": {
+                  "type": "object",
+                  "additionalProperties": true
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Bulk insert success"
+          }
+        }
+      },
+
+      "delete": {
+        "tags": ["Firestore"],
+        "summary": "Delete all user documents from collection",
+        "parameters": [
+          {
+            "name": "collectionName",
+            "in": "path",
+            "required": true,
+            "schema": { "type": "string" }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "All docs deleted"
+          }
+        }
+      }
     }
   },
   "components": {
